src/styles.scss
@use '@angular/material' as mat;
@import 'styles/containers.scss';
@import 'styles/roboto.scss';
@import 'styles/material-icons.scss';
@import 'styles/themes';
@import 'styles/scrollbar';
//@import 'styles/copy';
@import 'styles/colors';
@import 'styles/flex-layout';

@include mat.core();

html, body {
  height: 100%;
  background-color: #222222;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

* {
  &:active,
  :focus {
    outline: none !important;
  }
}

.spacer {
  flex: 1 1 auto;
}

.m5 {
  margin: 5px;
}

.m8 {
  margin: 8px;
}

.m10 {
  margin: 10px;
}

.m10r {
  margin-right: 10px;
}

.p5 {
  padding: 5px;
}

.p10 {
  padding: 10px;
}

.component {
  margin: 10px;
}

.card-size-m {
  max-width: 400px;
}

.card-size-l {
  max-width: 600px;
}

.container {
  width: 100%;
  padding: 12px;
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 1264px) {
  .container {
    max-width: 1185px;
  }
}

@media (min-width: 960px) {
  .container {
    max-width: 900px;
  }
}

.center-container {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center
}

.full-width {
  width: 100%;
}

/* Change Autocomplete styles in Chrome*/
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: #ffffff;
  //-webkit-box-shadow: 0 0 0 1000px #000 inset;
  transition: background-color 10000s;
}

.mat-loading .mat-button-wrapper {
  visibility: hidden;
}

.mat-loading .mat-progress-spinner {
  position: absolute;
  top: calc(50% - 10px);
  left: calc(50% - 10px);
}

.card-no-avatar-margin-fix {
  .mat-card-header-text {
    margin: 0;
  }
}

.a-nav {
  color: white;
  text-decoration: none;
}

.mail {
  text-decoration: none;

  &:link {
    color: var(--primary-color);
  }

  &:visited {
    color: #095484;
  }

  &:hover {
    color: #8ebf42;
  }

  &:active {
    color: #800000;
  }

}

